<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#33691E"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/card2"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toStartOf="@+id/card3"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/card5"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDerrotas"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/card4"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/card1"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintStart_toEndOf="@+id/card5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <ImageView
        android:id="@+id/card3"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginTop="108dp"
        app:layout_constraintEnd_toStartOf="@+id/card4"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#212121"
        android:onClick="onClickComprar"
        android:text="@string/comprar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#212121"
        android:onClick="onClickStand"
        android:text="@string/parar"
        android:textColor="#F4EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnComprar"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userCard2"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toStartOf="@+id/userCard3"
        app:layout_constraintStart_toEndOf="@+id/userCard1" />

    <ImageView
        android:id="@+id/userCard4"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userCard3" />

    <ImageView
        android:id="@+id/userCard3"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/btnComprar"
        app:layout_constraintEnd_toStartOf="@+id/userCard4"
        app:layout_constraintStart_toEndOf="@+id/userCard2" />

    <ImageView
        android:id="@+id/userCard5"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/btnStop"
        app:layout_constraintEnd_toStartOf="@+id/userCard1"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/userCard1"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/btnStop"
        app:layout_constraintEnd_toStartOf="@+id/userCard2"
        app:layout_constraintStart_toEndOf="@+id/userCard5" />

    <ImageView
        android:id="@+id/deck"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_marginStart="334dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/red_back" />

    <TextView
        android:id="@+id/txtVitorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="332dp"
        android:text="@string/vitorias"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDerrotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="326dp"
        android:text="@string/derrotas"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVitorias" />

    <TextView
        android:id="@+id/txtWin"
        android:layout_width="30dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="290dp"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#0021FF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtVitorias"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLose"
        android:layout_width="29dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="292dp"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textColorHighlight="#0409FD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtDerrotas"
        app:layout_constraintTop_toBottomOf="@+id/txtWin" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="115dp"
        android:layout_height="71dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="272dp"
        android:backgroundTint="#FFEB3B"
        android:onClick="onClickReset"
        android:shadowColor="#B71C1C"
        android:text="@string/novo_jogo"
        android:textColor="#000"
        android:textColorHighlight="#8BC34A"
        android:textColorHint="#8BC34A"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="265dp"
        android:layout_marginBottom="4dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/dealerScore"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dealerScore"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/userScore"
        android:layout_width="37dp"
        android:layout_height="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="96dp"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userCard4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="266dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="96dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userCard3"
        app:layout_constraintEnd_toStartOf="@+id/userScore"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>